--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -4,19 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A cool photography gallery website.">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Josh Schaefer">
   <title>Cool Pics 📷</title>
   <link rel="stylesheet" href="coolpics.css">
   <script src="coolpics.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Cool Pics 📷</h1>
-    <nav>
-      <button>Menu</button>
-    </nav>
+    <div class="header-content">
+      <h1>Cool Pics 📷</h1>
+      <nav>
+        <button class="menu-button">Menu</button>
+        <div class="menu">
+          <a href="#">Home</a>
+          <a href="#">Gallery</a>
+          <a href="#">Contact</a>
+        </div>
+      </nav>
+    </div>
   </header>
-
   <main>
     <h2>My Cool Pictures</h2>
     <section class="gallery">
@@ -35,5 +41,7 @@
   <footer>
     <p>©2023 Not a real site 😀</p>
   </footer>
+
+  <dialog id="modal"></dialog>
 </body>
 </html>
