Finished registeration page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>  
   <div class="content">
     <header>
+      <nav>
+      <a href="register/index.html">Register for Activity</a>
+      </nav>
       <select id="theme">
         <option value="light">Light</option>
         <option value="dark">Dark</option>
