--- a/register/index.html
+++ b/register/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="register.css" />
-    <script src="register.js" defer></script>
+    <script type="module" src="register.js"></script>
   </head>
   <body>
     <div class="testbox">
