actually finished recipes page

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <!-- =========  MAIN  ========= -->
-    <main>>
+    <main>
       <form class="search-bar">
         <label for="search" class="visually-hidden">Find a recipe</label>
         <input type="text" id="search" placeholder="Find a recipe" />
