added filtering by tags and cleaned up code structure

--- a/moviereviews/index.html
+++ b/moviereviews/index.html
@@ -37,20 +37,8 @@
       <a href="reviews.html" class="btn">Browse Reviews</a>
     </section>
 
-    <!-- Featured Banner -->
-    <section class="movie-card">
-      <div class="movie-preview">
-        <img src="images/dune-part-2.jpg" alt="Dune Part II Poster" class="movie-thumb">
-        <div class="movie-info">
-          <p class="featured-label">Featured: Dune Part II</p>
-          <p class="stars">⭐⭐⭐⭐⭐</p>
-          <p class="review-text">“An epic continuation that blends action and philosophy — a must-watch for sci-fi fans.”
-          <span class="reviewer">– Jordan M.</span>
-          </p>
-          <a href="#" class="write-review-btn">Write a Review</a>
-        </div>
-      </div>
-    </section>
+    <!-- Featured Movie (Dynamic) -->
+    <section id="featured-movie"></section>
 
     <!-- About Section -->
     <section class="about">
@@ -66,5 +54,7 @@
     <p>&copy; 2025 FlickPick | Contact | Social Links</p>
   </footer>
 
+<script type="module" src="./main.js"></script>
 </body>
 </html>
+
